// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show ExpenseSummary component with multiple expenses. 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     with a total of 
    $12,345.67
  </h1>
</div>
`;

exports[`Should show ExpenseSummary component with one expense. 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     with a total of 
    $1.23
  </h1>
</div>
`;
